# cs231n-spr-2025

./: .gitignore  Dockerfile  README.md  constraints.txt  docker-compose.yml  justfile  pyproject.toml
src/cs231n_spr_2025/: __init__.py  __main__.py
src/image_classification/: README.md  cli.py  config.py  main.py  original_main.py
src/image_classification/configs/: default.yaml
src/twolayer_nn/: twolayer_nn.py
tests/: test_scripts.py
